--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "dotenv-webpack": "^1.8.0",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.0",
     "gh-pages": "^3.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^4.4.1",
     "ts-loader": "^7.0.1",
     "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
@@ -34,6 +34,7 @@
     "bootstrap-vue": "^2.16.0",
     "jszip": "^3.5.0",
     "peerjs": "^1.3.1",
+    "pixi-layers": "^0.3.1",
     "pixi.js": "^5.3.3",
     "vue": "^2.6.12"
   }
