--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "https://rossilorenzo.tk/dndme/",
   "name": "drawndice",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -37,6 +37,8 @@
     "peerjs": "^1.3.1",
     "pixi-layers": "^0.3.1",
     "pixi.js": "^5.3.3",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2"
   }
 }
