--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
-    //"strict": true,
+    "strict": true,
     "target": "es6",
     "module": "es6",
     "allowSyntheticDefaultImports": true,
