--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "predeploy": "npx webpack --mode=production",
+    "predeploy": "npx webpack --mode=development",
     "deploy": "gh-pages -d dist",
     "dev-server": "webpack-dev-server --mode=development"
   },
@@ -18,6 +18,7 @@
     "dotenv-webpack": "^1.8.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
+    "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^7.0.1",
     "typescript": "^4.1.2",
