--- a/package.json
+++ b/package.json
@@ -8,36 +8,36 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "npx webpack --mode=development",
     "deploy": "gh-pages -d dist",
-    "dev-server": "webpack-dev-server --mode=development"
+    "serve": "webpack serve --mode=development"
   },
   "keywords": [],
   "author": "",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.5.3",
-    "dotenv-webpack": "^1.8.0",
+    "css-loader": "^5.1.1",
+    "dotenv-webpack": "^7.0.1",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
     "git-revision-webpack-plugin": "^3.0.6",
-    "html-webpack-plugin": "^4.5.0",
-    "ts-loader": "^7.0.1",
-    "typescript": "^4.1.2",
+    "html-webpack-plugin": "^5.3.0",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
-    "vue-loader": "^15.9.5",
+    "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@msgpack/msgpack": "^1.12.2",
-    "bootstrap": "^4.5.3",
-    "bootstrap-vue": "^2.20.1",
-    "jszip": "^3.5.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@msgpack/msgpack": "^2.4.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "jszip": "^3.6.0",
     "peerjs": "^1.3.1",
     "pixi-layers": "^0.3.1",
-    "pixi.js": "^5.3.3",
+    "pixi.js": "^5.3.7",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2"
