Change site to .dev

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rossilorenzo.tk/dndme/",
+  "homepage": "https://rossilorenzo.dev/dndme/",
   "name": "drawndice",
   "version": "1.1.0",
   "description": "",
