--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "author": "",
   "devDependencies": {
+    "@types/simple-peer": "^9.11.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.1",
     "dotenv-webpack": "^7.0.1",
@@ -20,6 +21,7 @@
     "gh-pages": "^3.1.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^5.3.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
@@ -31,13 +33,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
-    "@msgpack/msgpack": "^2.4.1",
+    "@msgpack/msgpack": "^2.7.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "buffer": "^6.0.3",
     "jszip": "^3.6.0",
-    "peerjs": "^1.3.1",
     "pixi-layers": "^0.3.1",
     "pixi.js": "^5.3.7",
+    "simple-peer": "^9.11.0",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2"
