Fix compatibility and build errors
- Add SHARE components to old save files
- Fix old images not loading correctly
- Fix deserialization's non-deterministic system order
- Fix lights and players hidden behaviour
- Fix pin display scale not correct on preview
- Fix typescript errors
- Add map retrocompatibility rewriter
- Fix SafeEventEmitter removing wrong 'once' listener

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "useDefineForClassFields": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "isolatedModules": true,
     "strict": true,
     "jsx": "preserve",
