--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "predeploy": "vite build",
+    "predeploy": "vite build --base=/dndme/",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
