--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   "author": "",
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
-    "@types/node": "^16.11.21",
-    "@vitejs/plugin-vue": "^2.0.1",
+    "@types/node": "^18.11.9",
+    "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.7.0",
-    "eslint-plugin-vue": "^8.3.0",
-    "gh-pages": "^3.1.0",
+    "eslint-plugin-vue": "^9.7.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.5.1",
     "rollup-plugin-visualizer": "^5.5.4",
     "sass": "^1.49.0",
-    "typescript": "~4.5.4",
-    "vite": "^2.7.13",
-    "vue-tsc": "^0.30.5"
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4",
+    "vue-tsc": "^1.0.9"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
