Add networking password, name & minor type rename

--- a/signaling/Cargo.toml
+++ b/signaling/Cargo.toml
@@ -6,20 +6,20 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.6.1", default-features = false, features = ["http2", "ws", "tower-log", "http1"] }
 base64 = "0.21.0"
-compact_str = { version = "0.6.1", features = ["serde"] }
-dashmap = { version = "5.4.0", features = ["raw-api"] }
+compact_str = { version = "0.7.1", features = ["serde"] }
+dashmap = "5.5.0"
 futures = { version = "0.3.25", default-features = false, features = ["std"] }
-p256 = { version = "0.11.1", features = ["serde", "pem"] }
+p256 = { version = "0.13.2", features = ["serde", "pem"] }
 parking_lot = { version = "0.12.1", features = ["deadlock_detection", "arc_lock"] }
 rand = "0.8.5"
-rmp-serde = "1.1.1"
+rmp-serde = "1.1.2"
 serde = { version = "1.0.152", features = ["derive"] }
 serde-byte-array = "0.1.2"
 serde_bytes = "0.11.12"
 sha2 = "0.10.6"
 thiserror = "1.0.38"
-tokio = { version = "1.24.0", features = ["macros", "rt-multi-thread"] }
-tracing = { version = "0.1.37", features = ["max_level_trace"] }
+tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.37", features = ["max_level_info"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
 [dev-dependencies]
