--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "pwapreview": "vite build && python3 -m http.server -d dist",
     "check": "vue-tsc --noEmit",
     "predeploy": "vite build --base=/dndme/",
     "deploy": "gh-pages -d dist"
@@ -26,6 +27,7 @@
     "sass": "^1.49.0",
     "typescript": "^5.1.6",
     "vite": "^3.2.4",
+    "vite-plugin-pwa": "^0.16.4",
     "vue-tsc": "^1.0.9"
   },
   "dependencies": {
