--- a/package.json
+++ b/package.json
@@ -14,31 +14,36 @@
   "keywords": [],
   "author": "",
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@types/node": "^18.11.9",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.7.0",
-    "eslint-plugin-vue": "^9.7.0",
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@types/bootstrap": "^5.2.6",
+    "@types/cropperjs": "^1.3.0",
+    "@types/node": "^20.5.3",
+    "@vitejs/plugin-vue": "^4.3.3",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "eslint": "^8.47.0",
+    "eslint-plugin-vue": "^9.17.0",
     "gh-pages": "^4.0.0",
-    "prettier": "^2.5.1",
+    "prettier": "^3.0.2",
     "rollup-plugin-visualizer": "^5.5.4",
-    "sass": "^1.49.0",
+    "sass": "^1.66.1",
     "typescript": "^5.1.6",
-    "vite": "^3.2.4",
+    "vite": "^4.4.9",
     "vite-plugin-pwa": "^0.16.4",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.8.8",
+    "workbox-build": "^7.0.0",
+    "workbox-window": "^7.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@msgpack/msgpack": "^2.7.1",
     "@pixi/layers": "^2.0.1",
-    "@types/bootstrap": "^5.1.9",
-    "bootstrap": "^5.1.3",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.1",
     "buffer": "^6.0.3",
-    "jszip": "^3.7.1",
+    "cropperjs": "^1.5.13",
+    "jszip": "^3.10.1",
     "pixi.js": "^7.0.5",
-    "vue": "^3.2.27"
+    "vue": "^3.3.4"
   }
 }
