--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@types/bootstrap": "^5.2.6",
-    "@types/cropperjs": "^1.3.0",
     "@types/node": "^20.5.3",
     "@vitejs/plugin-vue": "^4.3.3",
     "@vue/eslint-config-prettier": "^8.0.0",
@@ -25,7 +24,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "gh-pages": "^4.0.0",
     "prettier": "^3.0.2",
-    "rollup-plugin-visualizer": "^5.5.4",
+    "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.66.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
@@ -37,13 +36,25 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@msgpack/msgpack": "^2.7.1",
-    "@pixi/layers": "^2.0.1",
+    "@pixi/app": "^7.2.4",
+    "@pixi/assets": "^7.2.4",
+    "@pixi/core": "^7.2.4",
+    "@pixi/display": "^7.2.4",
+    "@pixi/extract": "^7.2.4",
+    "@pixi/graphics": "^7.2.4",
+    "@pixi/layers": "^2.1.0",
+    "@pixi/mesh": "^7.2.4",
+    "@pixi/mesh-extras": "^7.2.4",
+    "@pixi/sprite": "^7.2.4",
+    "@pixi/sprite-tiling": "^7.2.4",
+    "@pixi/spritesheet": "^7.2.4",
+    "@pixi/text": "^7.2.4",
+    "@pixi/utils": "^7.2.4",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
     "buffer": "^6.0.3",
     "cropperjs": "^1.5.13",
     "jszip": "^3.10.1",
-    "pixi.js": "^7.0.5",
     "vue": "^3.3.4"
   }
 }
