Fix various bugs w/ images, logs, commands
- Fix images not visible sometimes after undo/redo commands
- Fix copy-paste not working in multiplayer
- Fix pin images not scaling with pins (oops)
- Fix loggers not remembering their log level
- Fix image visibility not updating when moving images
- Fix command system sometimes breaking up and crying

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-VITE_DEFAULT_LOG_LEVEL=INFO
+VITE_LOG_DIRECTIVE=INFO
 VITE_MAX_LOG_LEVEL=INFO
 VITE_LOG_PROFILE=false
 VITE_DISCOVERY_URL=wss://discovery.url/
